# fontmgr

./: build.gradle.kts  settings.gradle.kts
native/: CMakeLists.txt  FontConfig.cpp
native/include/: ir_mmd_linux_utility_font_n_FontConfig.h
sources/: fontyab.com
src/main/java/ir/mmd/linux/utility/font/n/: FontConfig.java
src/main/java/ir/mmd/linux/utility/font/vm/: JniClassesFeature.java
src/main/kotlin/ir/mmd/linux/utility/font/: CommandLine.kt  Constants.kt  FlagBuilder.kt  Main.kt
src/main/kotlin/ir/mmd/linux/utility/font/cmd/: Command.kt  HelpCommand.kt  InstallCommand.kt  ListCommand.kt  UpdateCommand.kt
src/main/kotlin/ir/mmd/linux/utility/font/service/: FontService.kt  HttpClient.kt  LocalCacheService.kt  LocalIndexService.kt  LocalSourcesService.kt
